# tf.extra_losses

./: CMakeLists.txt  LICENSE  README.md  check_op.py  common.cc  common.h  l_softmax_grad_op.cc  l_softmax_grad_op.cu  l_softmax_op.cc  l_softmax_op.cu  l_softmax_op.h  py_loss.py  test_op.py
